--- a/accounting-ui/src/app/pages/dashboard/dashboard.component.html
+++ b/accounting-ui/src/app/pages/dashboard/dashboard.component.html
@@ -31,8 +31,9 @@
             <button class="primary">+ Request Payment</button>
           </div>
         </div>
-        <div class="invoice-table-wrapper">
-          <table class="invoice-table">
+        <div class="invoice-table-wrapper" style="background-color: rgb(179, 139, 87);">
+            <app-transactions-panel></app-transactions-panel>
+          <!-- <table class="invoice-table">
             <thead>
               <tr>
                 <th>Name</th>
@@ -48,9 +49,8 @@
                 <td class="unpaid">Unpaid</td>
                 <td>$15,254</td>
               </tr>
-              <!-- Add more rows -->
             </tbody>
-          </table>
+          </table> -->
         </div>
       </div>
   
@@ -61,10 +61,10 @@
           <!-- <div class="chart-box">[Chart Placeholder]</div> -->
           <app-docs-load-panel></app-docs-load-panel>
         </div>
-        <div class="chart-card">
+        <!-- <div class="chart-card">
           <h4>Transaction View</h4>
           <div class="chart-box">[Chart Placeholder]</div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
