creted a new page

--- a/accounting-ui/src/app/pages/dashboard/dashboard.component.html
+++ b/accounting-ui/src/app/pages/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
             <button class="primary">+ Request Payment</button>
           </div>
         </div>
-        <div class="invoice-table-wrapper" style="background-color: rgb(179, 139, 87);">
+        <div class="invoice-table-wrapper">
             <app-transactions-panel></app-transactions-panel>
           <!-- <table class="invoice-table">
             <thead>
@@ -56,8 +56,7 @@
   
       <!-- Charts -->
       <div class="charts-section">
-        <div class="chart-card">
-          <h4>Load documents</h4>
+        <div class="chart-card" style="overflow-y: auto;">
           <!-- <div class="chart-box">[Chart Placeholder]</div> -->
           <app-docs-load-panel></app-docs-load-panel>
         </div>
