--- a/accounting-ui/src/app/pages/dashboard/components/docs-load-panel/docs-load-panel.component.html
+++ b/accounting-ui/src/app/pages/dashboard/components/docs-load-panel/docs-load-panel.component.html
@@ -11,28 +11,36 @@
         height: 100%; /* Added explicit height */
         min-height: 0; /* Added to ensure flex child can shrink */
         flex: 1;
-        overflow-y: auto;
+        /* overflow-y: auto; */
     }
-
+    .p-stepper {
+            flex-basis: 50rem;
+        } 
 </style>
 <p-toast></p-toast>
+<div style="display: flex;flex-direction: row;justify-content: space-between;">
+    <h4>Load documents</h4>
+    <p-button icon="pi pi-cloud-upload" label="Close Month" severity="secondary" [raised]="true" [disabled]="!(uploadedBankStatements.length>0)"/>
+</div>
+
+
 <p-tabView>
     <p-tabPanel header="Load Bank Statements">
         <div class="chart-box">
             <p-fileupload 
-            name="demo[]" 
-            url="https://www.primefaces.org/cdn/api/upload.php" 
-            (onUpload)="onUpload($event)" 
-            [multiple]="true" 
-            accept=".pdf,.csv,.xlsx,image/*" 
-            maxFileSize="100000000" 
-            mode="advanced">
+                name="demo[]" 
+                [customUpload]="true"
+                (uploadHandler)="onBankStatementsUpload($event)" 
+                [multiple]="true"
+                accept=".pdf,.csv,.xlsx,image/*" 
+                maxFileSize="100000000" 
+                mode="advanced">
                 <ng-template #empty>
-                    <div>Drag and drop files to here to upload.</div>
+                    <div style="display: flex;justify-content: center">Drag and drop files to here to upload.</div>
                 </ng-template>
                 <ng-template #content>
-                    <ul *ngIf="uploadedFiles.length">
-                        <li *ngFor="let file of uploadedFiles">{{ file.name }} - {{ file.size }} bytes</li>
+                    <ul *ngIf="uploadedBankStatements.length">
+                        <li *ngFor="let file of uploadedBankStatements">{{ file.name }} - {{ file.size }} bytes</li>
                     </ul>
                 </ng-template>
             </p-fileupload>
@@ -40,47 +48,44 @@
     </p-tabPanel>
     <p-tabPanel header="Load Invoices">
         <div class="chart-box">
-            <!-- <p-fileUpload 
-                mode="basic" 
-                name="invoices[]" 
-                accept=".pdf,.csv,.xlsx" 
-                maxFileSize="100000000"
-                chooseLabel="Add Invoices"
-                (onUpload)="onUpload($event)"
-                (onError)="onError($event)"
-                [auto]="true"
-                [showUploadButton]="false"
-                [showCancelButton]="false">
-            </p-fileUpload> -->
-            <div class="card">
-                <p-toast />
-                <p-fileupload name="demo[]" url="https://www.primefaces.org/cdn/api/upload.php" (onUpload)="onUpload($event)" [multiple]="true" accept="image/*" maxFileSize="1000000" mode="advanced">
-                    <ng-template #empty>
-                        <div>Drag and drop files to here to upload.</div>
-                    </ng-template>
-                    <!-- <ng-template #content>
-                        <ul *ngIf="uploadedFiles.length">
-                            <li *ngFor="let file of uploadedFiles">{{ file.name }} - {{ file.size }} bytes</li>
-                        </ul>
-                    </ng-template> -->
-                </p-fileupload>
-            </div>
+            <p-fileupload 
+            name="demo[]" 
+            url="https://www.primefaces.org/cdn/api/upload.php" 
+            (onUpload)="onInvoicesUpload($event)" 
+            [multiple]="true" 
+            accept=".pdf,.csv,.xlsx,image/*" 
+            maxFileSize="100000000" 
+            mode="advanced">
+                <ng-template #empty>
+                    <div style="display: flex;justify-content: center">Drag and drop files to here to upload.</div>
+                </ng-template>
+                <ng-template #content>
+                    <ul *ngIf="uploadedInvoices.length">
+                        <li *ngFor="let file of uploadedInvoices">{{ file.name }} - {{ file.size }} bytes</li>
+                    </ul>
+                </ng-template>
+            </p-fileupload>
         </div>
     </p-tabPanel>
     <p-tabPanel header="Load Expenses">
         <div class="chart-box">
-            <p-fileUpload 
-                mode="basic" 
-                name="expenses[]" 
-                accept=".pdf,.csv,.xlsx" 
-                maxFileSize="1000000"
-                chooseLabel="Add Expenses"
-                (onUpload)="onUpload($event)"
-                (onError)="onError($event)"
-                [auto]="true"
-                [showUploadButton]="false"
-                [showCancelButton]="false">
-            </p-fileUpload>
+            <p-fileupload 
+            name="demo[]" 
+            url="https://www.primefaces.org/cdn/api/upload.php" 
+            (onUpload)="onUploadExpenses($event)" 
+            [multiple]="true" 
+            accept=".pdf,.csv,.xlsx,image/*" 
+            maxFileSize="100000000" 
+            mode="advanced">
+                <ng-template #empty>
+                    <div style="display: flex;justify-content: center">Drag and drop files to here to upload.</div>
+                </ng-template>
+                <ng-template #content>
+                    <ul *ngIf="uploadedExpenses.length">
+                        <li *ngFor="let file of uploadedExpenses">{{ file.name }} - {{ file.size }} bytes</li>
+                    </ul>
+                </ng-template>
+            </p-fileupload>
         </div>
     </p-tabPanel>
 </p-tabView>
